src/.antlr/delphiParser.java
// Generated from c:/Users/shiva/Downloads/Final/src/delphi.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, PUBLIC=2, PRIVATE=3, PROTECTED=4, PUBLISHED=5, STRICT=6, CONSTRUCTOR=7, 
		DESTRUCTOR=8, AND=9, ARRAY=10, BEGIN=11, BOOLEAN=12, CASE=13, CHAR=14, 
		CHR=15, CONST=16, DIV=17, DO=18, DOWNTO=19, ELSE=20, END=21, FILE=22, 
		FOR=23, FUNCTION=24, GOTO=25, IF=26, IN=27, INTEGER=28, LABEL=29, MOD=30, 
		NIL=31, NOT=32, OF=33, OR=34, PACKED=35, PROCEDURE=36, PROGRAM=37, REAL=38, 
		RECORD=39, REPEAT=40, SET=41, THEN=42, TO=43, TYPE=44, UNTIL=45, VAR=46, 
		WHILE=47, WITH=48, PLUS=49, MINUS=50, STAR=51, SLASH=52, ASSIGN=53, COMMA=54, 
		SEMI=55, COLON=56, EQUAL=57, NOT_EQUAL=58, LT=59, LE=60, GE=61, GT=62, 
		LPAREN=63, RPAREN=64, LBRACK=65, LBRACK2=66, RBRACK=67, RBRACK2=68, POINTER=69, 
		AT=70, DOT=71, DOTDOT=72, LCURLY=73, RCURLY=74, UNIT=75, INTERFACE=76, 
		USES=77, STRING=78, IMPLEMENTATION=79, TRUE=80, FALSE=81, WS=82, COMMENT_1=83, 
		COMMENT_2=84, READLN=85, WRITELN=86, CONTINUE=87, BREAK=88, IDENT=89, 
		STRING_LITERAL=90, NUM_INT=91, NUM_REAL=92;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_usesUnitsPart = 4, RULE_labelDeclarationPart = 5, RULE_label = 6, 
		RULE_constantDefinitionPart = 7, RULE_constantDefinition = 8, RULE_constantChr = 9, 
		RULE_constant = 10, RULE_unsignedNumber = 11, RULE_unsignedInteger = 12, 
		RULE_unsignedReal = 13, RULE_sign = 14, RULE_bool_ = 15, RULE_string = 16, 
		RULE_typeDefinitionPart = 17, RULE_typeDefinition = 18, RULE_classType = 19, 
		RULE_classBlock = 20, RULE_visibilitySection = 21, RULE_visibilityKeyword = 22, 
		RULE_classMember = 23, RULE_methodDeclaration = 24, RULE_directive = 25, 
		RULE_constructorDeclaration = 26, RULE_destructorDeclaration = 27, RULE_constructorDefinition = 28, 
		RULE_destructorDefinition = 29, RULE_functionType = 30, RULE_procedureType = 31, 
		RULE_type_ = 32, RULE_simpleType = 33, RULE_scalarType = 34, RULE_subrangeType = 35, 
		RULE_typeIdentifier = 36, RULE_structuredType = 37, RULE_unpackedStructuredType = 38, 
		RULE_stringtype = 39, RULE_arrayType = 40, RULE_typeList = 41, RULE_indexType = 42, 
		RULE_componentType = 43, RULE_recordType = 44, RULE_fieldList = 45, RULE_fixedPart = 46, 
		RULE_recordSection = 47, RULE_variantPart = 48, RULE_tag = 49, RULE_variant = 50, 
		RULE_setType = 51, RULE_baseType = 52, RULE_fileType = 53, RULE_pointerType = 54, 
		RULE_variableDeclarationPart = 55, RULE_variableDeclaration = 56, RULE_procedureAndFunctionDeclarationPart = 57, 
		RULE_constructorDeclarationPart = 58, RULE_destructorDeclarationPart = 59, 
		RULE_constructorDefinitionPart = 60, RULE_destructorDefinitionPart = 61, 
		RULE_procedureOrFunctionDeclaration = 62, RULE_procedureDeclaration = 63, 
		RULE_formalParameterList = 64, RULE_formalParameterSection = 65, RULE_parameterGroup = 66, 
		RULE_identifierList = 67, RULE_constList = 68, RULE_functionDeclaration = 69, 
		RULE_resultType = 70, RULE_statement = 71, RULE_unlabelledStatement = 72, 
		RULE_simpleStatement = 73, RULE_assignmentStatement = 74, RULE_variable = 75, 
		RULE_expression = 76, RULE_relationaloperator = 77, RULE_simpleExpression = 78, 
		RULE_additiveoperator = 79, RULE_term = 80, RULE_multiplicativeoperator = 81, 
		RULE_signedFactor = 82, RULE_factor = 83, RULE_unsignedConstant = 84, 
		RULE_functionDesignator = 85, RULE_parameterList = 86, RULE_set_ = 87, 
		RULE_elementList = 88, RULE_element = 89, RULE_procedureStatement = 90, 
		RULE_actualParameter = 91, RULE_parameterwidth = 92, RULE_gotoStatement = 93, 
		RULE_emptyStatement_ = 94, RULE_empty_ = 95, RULE_structuredStatement = 96, 
		RULE_compoundStatement = 97, RULE_localBlock = 98, RULE_statements = 99, 
		RULE_conditionalStatement = 100, RULE_ifStatement = 101, RULE_caseStatement = 102, 
		RULE_caseListElement = 103, RULE_repetetiveStatement = 104, RULE_whileStatement = 105, 
		RULE_repeatStatement = 106, RULE_forStatement = 107, RULE_forList = 108, 
		RULE_initialValue = 109, RULE_finalValue = 110, RULE_withStatement = 111, 
		RULE_recordVariableList = 112, RULE_readln = 113, RULE_writeln = 114, 
		RULE_continue = 115, RULE_break = 116, RULE_readArguments = 117, RULE_writeArguments = 118, 
		RULE_readArg = 119, RULE_writeArg = 120, RULE_writeExpr = 121;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "block", "usesUnitsPart", 
			"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
			"constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
			"sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", "classType", 
			"classBlock", "visibilitySection", "visibilityKeyword", "classMember", 
			"methodDeclaration", "directive", "constructorDeclaration", "destructorDeclaration", 
			"constructorDefinition", "destructorDefinition", "functionType", "procedureType", 
			"type_", "simpleType", "scalarType", "subrangeType", "typeIdentifier", 
			"structuredType", "unpackedStructuredType", "stringtype", "arrayType", 
			"typeList", "indexType", "componentType", "recordType", "fieldList", 
			"fixedPart", "recordSection", "variantPart", "tag", "variant", "setType", 
			"baseType", "fileType", "pointerType", "variableDeclarationPart", "variableDeclaration", 
			"procedureAndFunctionDeclarationPart", "constructorDeclarationPart", 
			"destructorDeclarationPart", "constructorDefinitionPart", "destructorDefinitionPart", 
			"procedureOrFunctionDeclaration", "procedureDeclaration", "formalParameterList", 
			"formalParameterSection", "parameterGroup", "identifierList", "constList", 
			"functionDeclaration", "resultType", "statement", "unlabelledStatement", 
			"simpleStatement", "assignmentStatement", "variable", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterList", 
			"set_", "elementList", "element", "procedureStatement", "actualParameter", 
			"parameterwidth", "gotoStatement", "emptyStatement_", "empty_", "structuredStatement", 
			"compoundStatement", "localBlock", "statements", "conditionalStatement", 
			"ifStatement", "caseStatement", "caseListElement", "repetetiveStatement", 
			"whileStatement", "repeatStatement", "forStatement", "forList", "initialValue", 
			"finalValue", "withStatement", "recordVariableList", "readln", "writeln", 
			"continue", "break", "readArguments", "writeArguments", "readArg", "writeArg", 
			"writeExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CLASS'", "'PUBLIC'", "'PRIVATE'", "'PROTECTED'", "'PUBLISHED'", 
			"'STRICT'", "'CONSTRUCTOR'", "'DESTRUCTOR'", "'AND'", "'ARRAY'", "'BEGIN'", 
			"'BOOLEAN'", "'CASE'", "'CHAR'", "'CHR'", "'CONST'", "'DIV'", "'DO'", 
			"'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", "'GOTO'", 
			"'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", "'OF'", 
			"'OR'", "'PACKED'", "'PROCEDURE'", "'PROGRAM'", "'REAL'", "'RECORD'", 
			"'REPEAT'", "'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", 
			"'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", 
			"':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
			"'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", 
			"'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'", 
			null, null, null, "'READLN'", "'WRITELN'", "'CONTINUE'", "'BREAK'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "PUBLIC", "PRIVATE", "PROTECTED", "PUBLISHED", "STRICT", 
			"CONSTRUCTOR", "DESTRUCTOR", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", 
			"CHAR", "CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE", "END", "FILE", 
			"FOR", "FUNCTION", "GOTO", "IF", "IN", "INTEGER", "LABEL", "MOD", "NIL", 
			"NOT", "OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", "REAL", "RECORD", 
			"REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", 
			"PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", 
			"EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", 
			"LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", 
			"RCURLY", "UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", 
			"FALSE", "WS", "COMMENT_1", "COMMENT_2", "READLN", "WRITELN", "CONTINUE", 
			"BREAK", "IDENT", "STRING_LITERAL", "NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(delphiParser.INTERFACE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(244);
			programHeading();
			setState(246);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(245);
				match(INTERFACE);
				}
			}

			setState(248);
			block();
			setState(249);
			match(DOT);
			setState(250);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(delphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(266);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(252);
				match(PROGRAM);
				setState(253);
				identifier();
				setState(258);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(254);
					match(LPAREN);
					setState(255);
					identifierList();
					setState(256);
					match(RPAREN);
					}
				}

				setState(260);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(262);
				match(UNIT);
				setState(263);
				identifier();
				setState(264);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(delphiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(delphiParser.IDENT, i);
		}
		public List<TerminalNode> DOT() { return getTokens(delphiParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(delphiParser.DOT, i);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(268);
			match(IDENT);
			setState(273);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(269);
					match(DOT);
					setState(270);
					match(IDENT);
					}
					} 
				}
				setState(275);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
